# oklib

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
docs/: IMPLEMENTATION_PLAN.md  http11_progress.md  upload_pipeline.md  websocket_progress.md
docs/superpowers/plans/: 2026-06-28-production-upload-pipeline.md  2026-06-28-socks5-proxy-example.md
examples/: CMakeLists.txt  http_benchmark.cpp  http_client_demo.cpp  http_demo_routes.h  http_full_server.cpp  http_server.cpp  http_sync_client_demo.cpp  http_upload_benchmark.cpp  https_server.cpp  socks5_protocol.h  socks5_proxy_server.cpp  tcp_echo_client.cpp  tcp_echo_server.cpp  timer_thread_demo.cpp  tls_echo_client.cpp  tls_echo_server.cpp  websocket_client.cpp  websocket_server.cpp
examples/certs/: oklib_demo_server.crt  oklib_demo_server.key
examples/html/: upload_demo.html
include/oklib/base/: blocking_queue.h  countdown_latch.h  log_stream.h  logging.h  noncopyable.h  thread_pool.h  timestamp.h
include/oklib/http/: content_type.h  http_cache.h  http_client.h  http_client_cache.h  http_context.h  http_headers.h  http_parser.h  http_request.h  http_request_body_stream.h  http_response.h  http_response_writer.h  http_router.h  http_semantics.h  http_server.h  http_sync_client.h  multipart_parser.h  streaming_multipart_parser.h  tls_options.h  upload_file_writer.h  url_encoding.h
include/oklib/net/: acceptor.h  buffer.h  callbacks.h  channel.h  connector.h  event_loop.h  event_loop_thread.h  event_loop_thread_pool.h  inet_address.h  poller.h  resolver.h  socket.h  tcp_client.h  tcp_connection.h  tcp_server.h  timer_id.h  timer_thread.h  tls_options.h
include/oklib/websocket/: websocket_channel.h  websocket_client.h  websocket_frame.h  websocket_handshake.h  websocket_server.h
src/base/: countdown_latch.cpp  log_stream.cpp  logging.cpp  thread_pool.cpp  timestamp.cpp
src/http/: content_type.cpp  http_cache.cpp  http_client.cpp  http_client_cache.cpp  http_context.cpp  http_headers.cpp  http_parser.cpp  http_request.cpp  http_request_body_stream.cpp  http_response.cpp  http_response_writer.cpp  http_router.cpp  http_semantics.cpp  http_server.cpp  http_sync_client.cpp  multipart_parser.cpp  streaming_multipart_parser.cpp  tls_engine.cpp  tls_engine.h  upload_file_writer.cpp  url_encoding.cpp
src/net/: acceptor.cpp  buffer.cpp  callbacks.cpp  channel.cpp  connector.cpp  event_loop.cpp  event_loop_thread.cpp  event_loop_thread_pool.cpp  inet_address.cpp  poller.cpp  resolver.cpp  socket.cpp  tcp_client.cpp  tcp_connection.cpp  tcp_server.cpp  timer_thread.cpp  tls_engine.cpp  tls_engine.h
src/websocket/: websocket_channel.cpp  websocket_client.cpp  websocket_compression.cpp  websocket_compression.h  websocket_frame.cpp  websocket_handshake.cpp  websocket_server.cpp
tests/: CMakeLists.txt  smoke_test.cpp
tests/base/: base_test.cpp  verify_base_sources.cmake
tests/examples/: http_demo_routes_test.cpp  socks5_protocol_test.cpp  verify_tcp_echo_server_logging.cmake
tests/http/: content_type_test.cpp  http_cache_test.cpp  http_client_cache_test.cpp  http_client_test.cpp  http_edge_test.cpp  http_parser_test.cpp  http_router_test.cpp  http_semantics_test.cpp  http_sync_client_test.cpp  http_test.cpp  http_tls_test.cpp  http_upload_writer_test.cpp  multipart_parser_test.cpp  streaming_multipart_parser_test.cpp
tests/net/: inet_address_test.cpp  reactor_test.cpp  tcp_read_control_test.cpp  tcp_test.cpp  tcp_tls_test.cpp  timer_thread_test.cpp
tests/websocket/: websocket_core_test.cpp  websocket_integration_test.cpp
